# ProjectPressRoom

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  FEATURES.md  README.md  STEPPLAN.md  main.py  start.ps1
backend/: .env.example  Makefile  pyproject.toml
backend/src/pressroom/: cli.py  config.py  http_client.py  models.py  normalize.py  orchestrator.py  scheduler.py  scraper.py
backend/src/pressroom/api/: app.py  deps.py
backend/src/pressroom/api/routes/: articles.py  runs.py  sources.py
backend/src/pressroom/db/: connection.py  repository.py  schema.sql
backend/src/pressroom/db/migrations/: 0001_initial.sql  0002_fix_fts_tokenizer.sql  0003_scraped_content.sql  0004_fts_scraped_text.sql
backend/src/pressroom/fetchers/: base.py  rss.py
backend/tests/: conftest.py  test_api_articles.py  test_api_sources.py  test_http_client.py  test_integration_fetch.py  test_normalize.py  test_repository.py  test_rss_fetcher.py
backend/tests/fixtures/: gamestar_sample.xml  summary_only.xml
config/: sources.toml
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.module.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ArticleRow.module.css  ArticleRow.tsx  SourceCard.module.css  SourceCard.tsx
frontend/src/pages/: ArticlePage.module.css  ArticlePage.tsx  InboxPage.module.css  InboxPage.tsx  SearchPage.module.css  SearchPage.tsx  SetupPage.module.css  SetupPage.tsx  SourcesPage.module.css  SourcesPage.tsx
